# SSMI

./: .gitignore  .gitmodules  LICENSE.BSD  README.md
S2MI-Mapping/: README.md  package.xml
S2MI-Mapping/include/semantic_octree/: SemanticOcTree.h  SemanticOcTreeNode.h  Semantics.h
S2MI-Mapping/msg/: RayRLE.msg
S2MI-Mapping/params/: octomap_generator.yaml
S2MI-Mapping/scripts/: semantic_sensor.py
S2MI-Mapping/srv/: GetRLE.srv
SSMI-Mapping/: CMakeLists.txt  LICENSE  README.md  package.xml  setup.py
SSMI-Mapping/include/semantic_octomap_node/: octomap_generator.h  octomap_generator_base.h  octomap_generator_ros.h
SSMI-Mapping/include/semantic_octree/: SemanticOcTree.h  SemanticOcTree.hxx  SemanticOcTreeNode.h  Semantics.h
SSMI-Mapping/include/semantic_point_cloud/: semantic_point_type.h
SSMI-Mapping/launch/: only_semantic_octomap.launch  semantic_octomap.launch  semantic_sensor.launch
SSMI-Mapping/params/: octomap_generator.yaml  semantic_cloud.yaml  semantic_labels.yaml
SSMI-Mapping/scripts/: semantic_sensor.py  semantic_sensor_node.py
SSMI-Mapping/scripts/sensors/: semantic_sensor.py  semantic_sensor_node.py
SSMI-Mapping/scripts/ssmi_sensors/: semantic_sensor.py  semantic_sensor_node.py
SSMI-Mapping/src/semantic_octomap_node/: octomap_generator.cpp  octomap_generator_ros.cpp
SSMI-Mapping/src/semantic_octree/: Semantics.cpp
SSMI-Planning/: CMakeLists.txt  package.xml  setup.py
SSMI-Planning/launch/: run_semantic_exploration.launch
SSMI-Planning/params/: exploration_params.yaml
SSMI-Planning/rviz/: config.rviz
SSMI-Planning/src/cpp/inc/: safe_array.h
SSMI-Planning/src/cpp/inc/exploration/: astar.h  collision.h  util.h
SSMI-Planning/src/cpp/src/exploration/: astar.cpp  collision.cpp  python.cpp  util.cpp
SSMI-Planning/src/exploration/: semantic_exploration_node.py
SSMI-Planning/src/footprints/: collision_cpp.py  footprint_points.py  footprints.py
SSMI-Planning/src/mapping/: costmap.py
SSMI-Planning/src/navigation/: path_navigation_node_position.py
SSMI-Planning/src/planners/: astar_cpp.py
SSMI-Planning/src/ssmi_exploration/: semantic_exploration_node.py
SSMI-Planning/src/ssmi_footprints/: collision_cpp.py  footprints.py
SSMI-Planning/src/ssmi_mapping/: costmap.py
SSMI-Planning/src/ssmi_navigation/: path_navigation_node_position.py
SSMI-Planning/src/ssmi_planners/: astar_cpp.py
SSMI-Planning/src/ssmi_utilities/: utils.py
SSMI-Planning/src/utilities/: utils.py
ssmi_interface/: CMakeLists.txt  package.xml
ssmi_interface/msg/: LE.msg  RayRLE.msg
ssmi_interface/srv/: GetRLE.srv
ssmi_mapping/: CMakeLists.txt  package.xml
ssmi_mapping/config/: ssmi_cfg.yaml
ssmi_mapping/include/ssmi_mapping/semantic_octomap_node/: octomap_generator.h  octomap_generator_base.h  octomap_generator_ros.h
ssmi_mapping/include/ssmi_mapping/semantic_octree/: SemanticOcTree.h  SemanticOcTree.hxx  SemanticOcTreeNode.h  Semantics.h
ssmi_mapping/launch/: semantic_octomap_sim.launch.py
ssmi_mapping/rviz/: config.rviz
ssmi_mapping/scripts/: dynamic_tf.py  semantic_sensor_node.py
ssmi_mapping/sdf/: husky.sdf  world.sdf
ssmi_mapping/src/semantic_octomap_node/: octomap_generator.cpp  octomap_generator_ros.cpp
ssmi_mapping/src/semantic_octree/: Semantics.cpp
ssmi_mapping/ssmi_mapping/: dynamic_tf.py  semantic_sensor.py  semantic_sensor_node.py
