<?xml version="1.0"?>
<package>
  <name>semantic_octomap</name>
  <version>1.0.0</version>
  <description>Semantic OctoMap implementation</description>

  <author email="aasghari@eng.ucsd.edu">Arash Asgharivaskasi</author>
  
  <maintainer email="aasghari@eng.ucsd.edu">Arash Asgharivaskasi</maintainer>

  <license>ERL</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>message_generation</build_depend>
    
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  
  <build_depend>octomap</build_depend>
  <build_depend>octomap_msgs</build_depend>
  
  <build_depend>python-skimage</build_depend>
  <build_depend>python-numpy</build_depend>


  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>message_runtime</run_depend>
  
  <run_depend>pcl_ros</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>libpcl-all</run_depend>
  
  <run_depend>octomap</run_depend>
  <run_depend>octomap_msgs</run_depend>
  <run_depend>octomap_rviz_plugins</run_depend>
  
  <run_depend>python-skimage</run_depend>
  <run_depend>python-numpy</run_depend>
  
</package>
