<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ssmi_mapping</name>
  <version>0.0.0</version>
  <description>Semantic Octree in ROS2</description>
  <maintainer email="tit006@ucsd.edu">root</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_srvs</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>octomap</depend>
  <depend>octomap_msgs</depend>
  <depend>octomap_rviz_plugins</depend>
  <depend>tf2_ros</depend>
  <depend>ssmi_interface</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>skimage</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
